--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ openai>=1.0.0
 langchain>=0.1.0
 langchain-openai>=0.1.0
 scikit-learn>=1.0.0
+textblob>=0.17.0
+nltk>=3.7
 
 # Web and API
 requests>=2.28.0
@@ -29,6 +31,9 @@ beautifulsoup4>=4.11.0
 # Data Processing
 python-dotenv>=0.19.0
 pytz>=2022.1
+
+# PDF and Report Generation
+reportlab>=3.6.0
 
 # Optional: Advanced Features
 # kafka-python>=2.0.0  # For real-time streaming
