--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# API Keys and Sensitive Data
-config.json
-my_personal_config.json
-.env
-*.key
-*.pem
-
 # Python
 __pycache__/
 *.py[cod]
@@ -23,14 +16,12 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# Virtual Environment
+# Virtual environments
 venv/
 env/
 ENV/
@@ -53,14 +44,20 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Logs
-*.log
+# Data files
+*.pkl
+*.csv
+*.xlsx
+*.json
+data/
+reports/
 logs/
+*.log
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Environment variables
+.env
+.env.local
+.env.production
 
 # Temporary files
 *.tmp
@@ -68,10 +65,8 @@ logs/
 temp/
 tmp/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pytest
+# Cache
+.cache/
 .pytest_cache/
 
 # Coverage reports
@@ -79,11 +74,59 @@ htmlcov/
 .coverage
 .coverage.*
 coverage.xml
-*.cover
-.hypothesis/
 
-# Data files (optional - uncomment if you don't want to track data)
-# *.csv
-# *.xlsx
-# *.json
-# data/
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# Flask
+instance/
+.webassets-cache
+
+# Scrapy
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Trading specific
+*.db
+*.sqlite
+*.sqlite3
+market_data/
+trading_data/
+backtest_results/
